<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ListPreference
        android:key="pref_theme"
        android:title="@string/pref_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_entryValues"
        android:defaultValue="@string/pref_theme_default"/>

    <CheckBoxPreference
        android:key="pref_vibrate"
        android:title="@string/pref_vibrate"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="pref_speech"
        android:title="@string/pref_speech"
        android:summary="@string/pref_speech_sum"
        android:defaultValue="true"/>

</PreferenceScreen>