<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.lo.jireh.wheretoeat.com.lo.jireh.wheretoeat.MainActivity"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/layout_one">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/decide_for_me"
        android:background="#00FF00"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/button_choose" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_alignParentRight="true"
        android:text="@string/clear"
        android:background="#FF4444"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/button_clear" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_clear"
        android:layout_alignParentRight="true"
        android:text="@string/history"
        android:background="#FFF000"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/button_history" />

    <!--invisible button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#00000000"
        android:id="@+id/button_martin" />
</RelativeLayout>